--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "cviebrock/eloquent-sluggable": "^6.0",
         "ext-json": "*",
         "bensampo/laravel-enum": "^1.27",
         "fideloper/proxy": "^4.0",
