--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "cviebrock/eloquent-sluggable": "^6.0",
         "ext-json": "*",
         "bensampo/laravel-enum": "^1.27",
+        "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.0",
+        "laravel/telescope": "^3.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1"
     },
