--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
         "bensampo/laravel-enum": "^1.27",
         "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.0",
-        "laravel/telescope": "^3.0",
+        "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1"
     },
