--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -24,7 +24,7 @@ tar_backup:
   #   - if: ($CI_COMMIT_BRANCH == "develop" || $NPM_VERSION == "$NPM_VERSION")
   script:
     - echo "Starting backup"
-    - sudo tar -czvf /app/backup/"$CI_PROJECT_NAME"-"$CI_PIPELINE_ID"_`date +"%d-%m-%Y-%H:%M:%S"`.tar.gz $data_location
+    - tar -czvf /app/backup/"$CI_PROJECT_NAME"-"$CI_PIPELINE_ID"_`date +"%d-%m-%Y-%H:%M:%S"`.tar.gz $data_location
 
 release_uat_repo_clone:
   <<: *template
