--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -79,6 +79,6 @@ deploy_release_uat_22:
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
    # - rsync -avzt ./* bs1048@192.168.56.1:$path
     #- rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/$SOURCE/ bs1048@192.168.56.1:$path_1/$DEST
-    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ usrdev@SERVER_IP:$PATH/
+    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exlcude .git/ --exclude .gitlab-ci.yml --exclude .gitignore usrdev@SERVER_IP:$PATH/
     #- cd $BUILD_LOCATION/$CI_PROJECT_NAME
     #- scp -r $BUILD_LOCATION/$CI_PROJECT_NAME/app/* bs1048@192.168.56.1:$path_1
