--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -35,10 +35,9 @@ release_uat_repo_clone:
   when: manual
   variables:
     BRANCH: release-uat-22
-  #  BUILD_LOCATION: "/home/gitlab-runner/app"
   script:
     - echo "Clonging repo"
-    - git branch
+    #- git branch
     #- cd $STG_BUILD_LOCATION
     #- sudo git clone -b $BRANCH https://$MYUSERNAME:$MYTOKEN@gitlab.com/techbeach1/mybl-qa.git
     - cd $BUILD_LOCATION/$CI_PROJECT_NAME
