--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -1,5 +1,5 @@
 variables:
-  SERVER_IP: "172.16.191.44"
+  SERVER_IP: 172.16.191.44
   BUILD_LOCATION: "/app/assetlite/src/projects_uat/gitlab_uat"
 stages:
   - uat_backup
