--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -77,4 +77,4 @@ deploy_release_uat_22:
     - echo "Copying build artifacts to live server"
     - ssh-add <(echo "$KEY_STAGING")
     #- rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/$SOURCE/ bs1048@192.168.56.1:$path_1/$DEST
-    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore usrdev@SERVER_IP:$DEST_PATH
+    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore usrdev@$SERVER_IP:$DEST_PATH
