--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -6,6 +6,7 @@ stages:
   - clone
   - build
   - deploy
+  - svc-restart
 
 .job_template: &template
     tags:
@@ -78,3 +79,17 @@ deploy_release_uat_22:
     - ssh-add <(echo "$KEY_STAGING")
     #- rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/$SOURCE/ bs1048@192.168.56.1:$path_1/$DEST
     - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore --exclude .gitattributes usrdev@$SERVER_IP:$DEST_PATH
+
+service_restart:
+  stage: svc-restart
+  variables:
+    ANSIBLE_PATH: "/app/mybl/ansible/ansible-mybl-app-deploy/ENV/PROD/WEB-API"
+  when: manual
+  tags:
+    - ci-ansible
+  script:
+    #- echo $ANSIBLE_PATH
+    #- cp -r /home/usrdev/config /home/usrdev/builds/BErMj8E2/0/bl-front/bl-web-frontend/.git/config
+    - cd $ANSIBLE_PATH && ansible-playbook service-manage.yml
+    - echo 1>/app/mybl/runner/stdout
+
