--- a/deploy/release-uat-22.yml
+++ b/deploy/release-uat-22.yml
@@ -1,5 +1,6 @@
 variables:
-  SERVER_IP: 172.16.191.44
+  SERVER_IP1: 172.16.191.44
+  SERVER_IP2: 172.16.191.45
   BUILD_LOCATION: "/app/assetlite/src/projects_uat/gitlab_uat"
 stages:
   - uat_backup
@@ -57,7 +58,8 @@ deploy_release_uat_22:
     - echo "Copying build artifacts to live server"
     - ssh-add <(echo "$KEY_STAGING")
     #- rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/$SOURCE/ bs1048@192.168.56.1:$path_1/$DEST
-    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore --exclude .gitattributes usrdev@$SERVER_IP:$DEST_PATH
+    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore --exclude .gitattributes usrdev@$SERVER_IP1:$DEST_PATH
+    - rsync -avzt $BUILD_LOCATION/$CI_PROJECT_NAME/ --exclude .git/ --exclude .gitlab-ci.yml --exclude .gitignore --exclude .gitattributes usrdev@$SERVER_IP2:$DEST_PATH
 
 service_restart:
   stage: svc-restart
