--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "bensampo/laravel-enum": "^1.27",
         "cviebrock/eloquent-sluggable": "^6.0",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "guzzlehttp/guzzle": "^6.5|^7.0.1",
         "laravel/framework": "^6.0",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
